auth page added, by clicking the appropriate buttons we will be redirected to the auth0 page, thanks to which we can log in or register

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-@if (auth.isAuthenticated$ | async) {
-<button (click)="auth.logout()">Logout</button>
-@if (auth.user$ |async; as user) {
-{{ user.email }}
-{{ user.picture }}
-} }@else {
-<button (click)="auth.loginWithRedirect()">Login</button>
-}
+<router-outlet></router-outlet>
